# medium-collector

./: .gitignore  Makefile  README.md  pyproject.toml
data/: dataset-metadata.json
medium_collector/: __main__.py  mail_writers.py  parser.py  reader.py  scrape_reader.py  utils.py
medium_collector/download/: download.py
tests/unit/: test_parser.py  test_reader.py
